# webscrapping-hentaidad

./: .gitignore  bot.py  pyproject.toml  requirements.txt
modules/: Client.py  DownloadPhotos.py  custom_server.py
