[tool.poetry]
name = "hentaidad"
version = "0.1.0"
description = ""
authors = ["mandicoder <mandicoder@proton.me>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
bs4 = "^0.0.2"
requests = "^2.31.0"
python-dotenv = "^1.0.1"
pyrogram = "^2.0.106"
tgcrypto = "^1.2.5"
aiohttp = "^3.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
